--- a/css/jquery.countdown.css
+++ b/css/jquery.countdown.css
@@ -1,26 +1,83 @@
-@import url("https://fonts.googleapis.com/css?family=Lato");
-html,
-body {
-  height: 100%;
-  margin: 0;
-  font-family: Lato, sans-serif;
-  background-image: url("../img/background.jpg");
-  background-size: cover;
-  background-position: center;
+.countdownHolder{
+	font: 23px/0.8  'Quicksand', sans-serif;
+    height: 89px;
 }
-.wrapper {
-  text-align: center;
+.position{
+	display: inline-block;
+	height: 1.8em;
+	position: relative;
+	width: 41px;
+	font-weight: 500;
+	font-size: 0.85em;
 }
-.time {
-  color: #fff;
-  font-size: 6em;
+.digit {
+    color:rgba(0, 0, 0, 0.47);
+    font-size: 70px;
+    letter-spacing: -6px;
+    left: 3px;
+    bottom: 0;
+    position: absolute;
+	 font-family: 'Open Sans Condensed';
+
 }
-.label {
-  font-size: 2em;
-  display: block;
-  color: #aaa;
+.countDays{
+    background:none;
+	/* display:none !important;*/ 
 }
-.bg {
-  height: 100vh;
-  background-color: rgba(0, 0, 0, 0.75);
+.countDiv0{ /* display:none !important;*/ }
+.countHours {
+    background:none;
 }
+.countDiv1{}
+.countMinutes {
+    background:none;
+}
+.countDiv2{}
+.countSeconds{
+    background:none;
+}
+.countDiv{
+	/*--display:inline-block;
+	width:16px;
+	height:1.6em;
+	position:relative;--*/
+	display:none;
+}
+.countDiv:after{
+	top:0.9em;
+}
+/*--responsive design--*/
+@media(max-width:1024px){
+	.countDays, .countHours,
+ .countMinutes, .countSeconds {
+    padding: 35px 0;
+}
+.boxName {
+    padding: 10px;
+}
+.digit {
+    font-size: 65px;
+}
+#counter {
+    height: 151px;
+}
+}
+@media(max-width:991px){
+.timer_wrap {
+    width: 88%;
+}
+}
+@media(max-width:768px){
+.digit {
+    font-size: 83px;
+}
+}
+@media(max-width:667px){
+.position {
+    width: 34px;
+}
+}
+@media(max-width:384px){
+.position{width: 27px;}	
+}
+/*--/responsive design--*/
