--- a/css/jquery.countdown.css
+++ b/css/jquery.countdown.css
@@ -4,6 +4,7 @@ body {text-align: center;padding: 70px 50px;background: #0d1a29;font-family: san
   font-size: 3em;
   font-weight: 200;
   color: white;
+  font-family: "ALK Rex Bold", sans-serif;
   background-color: #aa390033;
   padding: 66px;
   text-shadow: 0 0 3px #a6003d;
