--- a/css/jquery.countdown.css
+++ b/css/jquery.countdown.css
@@ -1,11 +1,13 @@
 body {text-align: center;padding: 70px 50px;background: #0d1a29;font-family: sans-serif;font-weight: lighter;/* background-color: #000; */}
  
 #timer {
-  font-size: 3em;
+  font-size: 4em;
   font-weight: 200;
+  font-weight: 900;
   color: white;
   font-family: "ALK Rex Bold", sans-serif;
-  background-color: #aa390033;
+  background-color: #aa3900b3;
+  border-radius: 137px;
   padding: 66px;
   text-shadow: 0 0 3px #a6003d;
 }
